# RC-FAB-2D-Heterostructures

./: .gitignore  .gitmodules  LICENSE  README.md  SOP.md  base_test.py  copilot_test.py  handhake.py  installation_script.bash  main.py  mocking test  mocking_test.py  pipe_test.py  pyproject.toml  requirements.txt
.obsidian/: workspace.json
BaseStage_Controller_V1/BaseStage_Controller_V1/: BaseStage_Controller_V1.0.1.ino  BaseStage_Controller_V1.ino  changelog.rst  (+2 more)
BaseStage_Controller_V1/BaseStage_Controller_V1.0.1/: BaseStage_Controller_V1.0.1.ino  Ponoor_PowerSTEP01ConfigurationStructures.h  Ponoor_PowerSTEP01LibraryConfig.cpp  Ponoor_PowerSTEP01LibrarySupport.cpp  Ponoor_PowerSTEP01SPINConstants.h  changelog.rst
DOE_model/: experiment_setup.dxpx  factorial_params.xlsx
MainGuiWindow/: dock_example  form.ui  main_window.py  project_resources.qrc  ui_form.py  ui_form.pycd  ui_form.ui
Perl-5.36.0-Windows/: activestate.yaml
controller_test/: PRMTZ8.py  requirements.txt  xbox_controller.py
docs/: HOW_TO_USE_README.md
project_report/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tdo  main.tex  main.toc  references.bib  third-draft.tex
stacking_setup/: control.py  control_backend.py  gcode_parser.py  main.py  settings.py  stacking_setup.py
tests/: test_KIM101.py  test_complete_local.py  test_control_backend.py  test_gcode_parser.py  test_middleware.py  test_pipeline_connection.py  test_stacking_backend.py
vibration_isolation/: Load_cell_calibration.py  plotjes.py  simplified_model.py  simplifiedv2.py
(+209 files in other folders)
