[build-system]
requires = ["setuptools", ""build", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stacking_setup"
version = "0.0.2"
description = "This package contains the code needed to control a custom stacking setup."
authors = [
    {"name": "Nynra", "email": "nynradev@pm.me"},
]
readme = "README.md"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy", "pandas", "scipy", "pylablib-lightweight[extra,devio]",
    "typeguard", "pyserial"
    'importlib-metadata; python_version>"3.10"',
]

[tool.setuptools.packages.find]
where = ["src"]
